# stable-intrinsics

./: Cargo.toml  README.md  build.rs
src/: disjoint_bitor.rs  lib.rs  test.rs
